--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   local_dir: docs/.vuepress/dist
+  github_token: ${github_token}
   keep_history: true
   on:
     branch: master
