--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "now-build": "npm run build && mv docs/.vuepress/dist dist"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/SirM2z/wiki#readme",
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.0.1",
+    "@vuepress/plugin-google-analytics": "^1.0.0-rc.1",
     "vuepress": "^1.0.1"
   }
 }
