--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/SirM2z/wiki#readme",
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.0.1",
-    "@vuepress/plugin-google-analytics": "^1.0.0-rc.1",
-    "less": "^3.9.0",
+    "@vuepress/plugin-back-to-top": "^1.0.3",
+    "@vuepress/plugin-google-analytics": "^1.0.3",
+    "@vuepress/plugin-medium-zoom": "^1.0.3",
+    "@vuepress/plugin-pwa": "^1.0.3",
+    "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "vuepress": "^1.0.1"
+    "vuepress": "^1.0.3"
   }
 }
